--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,1 @@
-git config --global core.excludesfile ~/.gitignore_global *.ctxt *.class
-*.bluej
-*.class
-*.ctxt
-*.bluej
-*.bluej
+git config --global core.excludesfile ~/.gitignore_global *.ctxt *.class doc/
